<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profil" />

    <item
        android:id="@+id/menu_search_medicines"
        android:icon="@drawable/ic_medicament"
        android:title="@string/chercher_un_m_dicament" />


    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_historique"
        android:title="@string/historique_d_achat" />



    <item
        android:id="@+id/menu_about_us"
        android:icon="@drawable/ic_about"
        android:title="@string/qui_sommes_nous" />

    <item
        android:id="@+id/menu_send_prescription"
        android:icon="@drawable/ic_ordonnace"
        android:title="@string/envoyer_une_ordonnance" />
    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/ic_location"
        android:title="@string/voir_nos_locations" />


</menu>