<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="26dp"

    android:background="@android:color/transparent">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bottom_btn4" />

    <EditText
        android:id="@+id/nomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit"
        android:gravity="center"
        android:hint="@string/nom"
        android:minHeight="48dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/prenomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit"
        android:gravity="center"
        android:hint="@string/pr_nom"
        android:minHeight="48dp"
        android:textSize="14sp" />



    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/numeroEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit"
        android:gravity="center"
        android:hint="@string/num_ro"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit"
        android:gravity="center"
        android:hint="@string/e_mail"
        android:minHeight="48dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit"
        android:gravity="center"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_bottom"
        android:padding="16dp"
        android:text="@string/s_inscrire"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />


</LinearLayout>




