<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="26dp"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bottom_btn4" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit"

        android:gravity="center"
        android:hint="@string/e_mail"
        android:minHeight="48dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit"
        android:gravity="center"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_bottom"
        android:padding="16dp"
        android:text="@string/se_connecter"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />


</LinearLayout>