<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:elevation="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@drawable/rounded_corner"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"></androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="150dp"
                        android:layout_height="130dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/health" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/white_background"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView4">

                        <LinearLayout
                            android:id="@+id/main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/white_background"
                            android:orientation="vertical"
                            android:padding="26dp">

                            <!-- Bouton pour choisir une image depuis la galerie -->
                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/button_gallery"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:background="@drawable/rounded_bottom"
                                android:elevation="4dp"
                                android:padding="12dp"
                                android:text="@string/choisir_depuis_la_galerie"
                                android:textColor="@color/white" />

                            <!-- Bouton pour prendre une photo avec la caméra -->
                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/button_camera"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:background="@drawable/rounded_bottom"
                                android:elevation="4dp"
                                android:padding="12dp"
                                android:text="@string/prendre_une_photo_avec_la_cam_ra"
                                android:textColor="@color/white" />

                            <!-- Aperçu de l'image -->
                            <ImageView
                                android:id="@+id/image_view_preview"
                                android:layout_width="match_parent"
                                android:layout_height="300dp"
                                android:layout_marginTop="16dp"
                                android:contentDescription="Aperçu de l'ordonnance"
                                android:elevation="6dp"
                                android:padding="4dp"
                                android:scaleType="centerCrop" />

                            <!-- Bouton pour envoyer l'ordonnance -->
                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/button_send_ordonnance"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:background="@drawable/rounded_bottom"
                                android:elevation="4dp"
                                android:padding="12dp"
                                android:text="@string/envoyer_ordonnance"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>